--- a/app.json
+++ b/app.json
@@ -38,6 +38,13 @@
     ],
     "experiments": {
       "typedRoutes": true
-    }
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "157c7eb3-cae9-4580-8fc6-3ab0b3405ac3"
+      }
+    },
+    "owner": "trizahnabwire"
   }
 }
