--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-view-shot": "4.0.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "undefined": "\\"
+    "undefined": "\\",
+    "expo-dev-client": "~5.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
