--- a/eas.json
+++ b/eas.json
@@ -6,10 +6,11 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "branch": "master"
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
     },
     "production": {
       "autoIncrement": true
